# sparql-formatter

./: Cargo.toml  Makefile  README.md
example/: index.html
grammar/: sparql.l  sparql.y
pkg/: package.json  sparql_formatter.d.ts  sparql_formatter.js  sparql_formatter_bg.wasm  sparql_formatter_bg.wasm.d.ts
src/: lib.rs
tests/: wikidata.tsv
